[package]
name = "flexible-transceiver-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/main.rs"
crate-type = ["staticlib"]

[dependencies]
m3 = { path = "../../libs/rust/m3" }
num-complex = { version = "*", default-features = false }
#rand = "*"
#rustfft = "*"
microfft = "0.4.0"
crc = "*"